Some layout bugfixes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1589,8 +1589,6 @@ pre code {
   margin-left: auto;
 }
 .footer-container {
-  padding: 0px;
-  margin: 0px;
   background-color: #434343;
 }
 
